<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>factory.in.a.box</groupId>
    <artifactId>FIABvirtualplotter</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <name>Virtual Plotter Station</name>
    <description>Mimicks a real Plotter Station at OPC UA and handshake level</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <akka.version>2.5.25</akka.version>
    </properties>
    <repositories>
        <repository>
            <id>libs</id>
            <url>file:///${project.basedir}/../libs</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.12</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-testkit_2.12</artifactId>
            <version>${akka.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-slf4j_2.12</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>factory.in.a.box</groupId>
            <artifactId>FIABcore</artifactId>
            <version>1.0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>factory.in.a.box</groupId>
            <artifactId>FIABhandshake</artifactId>
            <version>1.0.3-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>factory.in.a.box</groupId>
            <artifactId>FIABopcuabase</artifactId>
            <version>1.0.3-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.11.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.9</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <executions>
                    <execution>
                        <id>install-jar-lib</id>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <groupId>factory.in.a.box</groupId>
                            <artifactId>FIABopcuabase</artifactId>
                            <version>1.0.3-SNAPSHOT</version>
                            <packaging>jar</packaging>
                            <file>${project.basedir}/../libs/original-FIABopcuabase-1.0.3-SNAPSHOT.jar
                            </file>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install-jar-lib-2</id>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <groupId>factory.in.a.box</groupId>
                            <artifactId>FIABcore</artifactId>
                            <version>1.0.1-SNAPSHOT</version>
                            <packaging>jar</packaging>
                            <file>${project.basedir}/../libs/FIABcore-1.0.1-SNAPSHOT.jar
                            </file>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install-jar-lib-3</id>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <groupId>factory.in.a.box</groupId>
                            <artifactId>FIABhandshake</artifactId>
                            <version>1.0.2-SNAPSHOT</version>
                            <packaging>jar</packaging>
                            <file>${project.basedir}/../libs/original-FIABhandshake-1.0.3-SNAPSHOT.jar
                            </file>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>reference.conf</resource>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>fiab.machine.plotter.opcua.ExampleStartupPlotter</Main-Class>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin-->
        </plugins>
    </build>
</project>